base/kubernetes/ingress/service.yaml
# Source: weatherapp-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: weatherapp-ui
